tests/trybuild_unavailable_panicking_macros/mut_bump_format.stderr
error: the potentially panicking api of `mut_bump_format!` is not available
       help: enable `bump-scope`'s "panic-on-alloc" feature or use `try`:
       `mut_bump_format!(try in bump, "{greeting}, {name}!")`
 --> tests/trybuild_unavailable_panicking_macros/mut_bump_format.rs:4:5
  |
4 |     mut_bump_format!(in bump, "{greeting}, {name}!")
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__mut_bump_format_panic_on_alloc` which comes from the expansion of the macro `mut_bump_format` (in Nightly builds, run with -Z macro-backtrace for more info)
